--- a/isdn.css
+++ b/isdn.css
@@ -203,6 +203,12 @@ button{
 #menu{
     display: none;
 }
+.attribution, .attribution a{
+    margin-top: 30px;
+    margin-bottom: 20px;
+    font-size: 12px;
+    color: hsl(0, 0%, 8%);
+}
 @media screen and (max-width:800px){
     html{
         width: 98%;
